# msu_m118_ivanov

./: .gitignore  README.md
EMPV/MPI_1/: Makefile  main.cpp
EMPV/MPI_2/: Makefile  main.cpp
EMPV/MPI_3/: Makefile  main.cpp  res.txt  visualize.py
EMPV/MPI_4/: Makefile  main.cpp  plotall.py
ants_blackholes/: main.py
ants_blackholes/code_python/: demo.graph  gen_circle.py  gen_random.py  main.py  plan.txt
ants_blackholes/one_thread/: Makefile  circle_10.graph  circle_2.graph  custom_1.graph  custom_2.graph  main.cpp  random_10.graph
blackholes/: .gitignore  Makefile  Source.cpp  config.txt  graph.py  input.txt  main.cpp
blackholes/blackholes/: CMakeLists.txt
blackholes/blackholes/chinese/: CMakeLists.txt  Makefile  main.cpp
blackholes/blackholes/condensation/: CMakeLists.txt  main.cpp
blackholes/blackholes/lib/: CMakeLists.txt  blackholes.cpp  blackholes.h
blackholes/blackholes/lib/algorithm/: algorithm.cpp  algorithm.h
blackholes/blackholes/lib/common/: CMakeLists.txt  common.h
blackholes/blackholes/lib/graph/: CMakeLists.txt  graph.cpp  graph.h
blackholes/blackholes/lib/io/: CMakeLists.txt  io.cpp  io.h
blackholes/blackholes/topsort/: CMakeLists.txt  main.cpp
blackholes/blackholes/topsort_over_chinese/: CMakeLists.txt  main.cpp
blackholes/chinese/: Makefile  chinese.output  local  main.cpp
blackholes/experiment/: .gitignore  config.txt  res_table.tex  results.py  run.py  run.sh
blackholes/graph_generator/: config.txt  graph.py
blackholes/graph_generator/generator/: generator.cpp
blackholes/graph_generator/graph_to_file/: Makefile  main.cpp
blackholes/pavt/: Makefile  article.tex  biblio.bib  plot.py  results.txt  sketch.tex  svproc.cls
blackholes/polus/: article_graph_single_thread_no_dac.conf  article_graph_single_thread_no_dac_2.txt  chineseDC.conf  chinese_async_condensed.conf  chinese_async_no_cond.conf  chinese_dc_mt_cond.conf  chinese_dc_mt_cond_medium.conf  chinese_dc_single_large.conf  chinese_dc_single_large_nocond.conf  chinese_dc_single_small.conf  chinese_dc_single_small_nocond.conf  chinese_many_threads.conf  chinese_vs_topochi.conf  chinese_vs_topochi_8thr.conf  config.txt  effective_grep.sh  gather_results.sh  run.py  setup.sh  topochi_skip_mode.conf  topsort.conf  topsort_filtered.conf  topsort_mt_cond_large.conf  topsort_single_large.conf  topsort_single_small.conf
blackholes/polus/results/: article_graph_single_thread_no_dac_2.txt  chinese_async_condensed_v0.5.txt  chinese_no_condensation_multithreading_v2.txt  clear_format.sh  merge_two_results.sh
blackholes/polus/results/bh_dc_med_lar/: bh_count.txt  parse_raw_grep.py
blackholes/polus/results/chinese_async_condensed/: chinese_async_condensed.txt  chinese_no_condensation_multithreading_v2.txt  merged.txt  parse_raw_grep.py
blackholes/polus/results/chinese_binding_comparison/: bh_count.txt  bh_filtered.txt  parse_raw_grep.py
blackholes/polus/results/chinese_core_binding/: bh_count.txt  bh_filtered.txt  parse_raw_grep.py
blackholes/polus/results/chinese_dc/: time.txt  (+2 more)
blackholes/res.lenovo.old/: email_output.txt  epinions1_output.txt  facebook_output.txt  google_output.txt  livejournal_output.txt
blackholes/stats/: Source.cpp  stats.py  stats.sh  stats.txt
blackholes/testdata/: chinese_article.graph
blackholes/texts/comp_nano_tech_03.20/: russian.txt
blackholes/topsort/: CMakeLists.txt  Makefile  Source.cpp  topsort.output  topsort_optimized.output
blackholes/topsort/lib/: CMakeLists.txt  blackholes.cpp
blackholes/topsort/lib/algorithm/: CMakeLists.txt  algorithm.h
blackholes/topsort/lib/graph/: graph.cpp  graph.h
blackholes/topsort/lib/io/: io.cpp
distributed_systems/lab1/: node.py  out.txt  run.sh
distributed_systems/lab1/example/: receive.py  send.py
distributed_systems/lab2/: node.py  out.txt  run.sh
h_perf_comp/: 1000.out  10000.out  100000.out  1000000.out  Makefile  gen.cpp  main.cpp  matrix.cpp  matrix.h
h_perf_comp_lab_2/: Makefile  main.cpp
hpc_mod_and_tech/lab2/: Makefile  bg_old.py  bluegene.py  bluegene.res  main.cpp  polus.py  polus.res  results_bluegene.py  results_polus.py
hpc_mod_and_tech/lab2/report/: bluegene.res.table  polus.res.table  report.tex
hpc_mod_and_tech/lab_1/: Makefile  cmd.txt  config.txt  graph.py  rep.txt  report.py  report.txt  result.spreadsheet.ods  submit.py
hpc_mod_and_tech/lab_1/errors/: RMAT.19.01  RMAT.25.00  SSCA2.24.00  SSCA2.25.02
hpc_mod_and_tech/lab_1/generator/: Makefile
hpc_mod_and_tech/lab_1/graph_to_file/: main.cpp
hpc_mod_and_tech/lab_1/outputs/: RMAT.02.00  RMAT.02.01  RMAT.02.02  RMAT.03.00  RMAT.03.01  RMAT.03.02  RMAT.04.00  RMAT.04.01  RMAT.04.02  RMAT.05.00  RMAT.05.01  RMAT.05.02  RMAT.06.00  RMAT.06.01  RMAT.06.02  RMAT.07.00  RMAT.07.01  RMAT.07.02  RMAT.08.00  RMAT.08.01  RMAT.08.02  RMAT.09.00  RMAT.09.01  RMAT.09.02  RMAT.10.00  RMAT.10.01  RMAT.10.02  RMAT.11.00  RMAT.11.01  RMAT.11.02  RMAT.12.00  RMAT.12.01  RMAT.12.02  RMAT.13.00  RMAT.13.01  RMAT.13.02  RMAT.14.00  RMAT.14.01  RMAT.14.02  RMAT.15.00  (+176 more)
lab1/: A_3x3.test  A_4x4.test  A_5x5.test  B_3x3.test  B_4x4.test  B_5x5.test  C0_3x3.test  C0_4x4.test  C0_5x5.test  Makefile  compare.cpp  fromtxt.cpp  gen.cpp  main.cpp  matrix.h  print.cpp  test.cpp  timeit.cpp  Отчет1.docx
lab2/: L1_cache.cpp  L2_cache.cpp  Makefile  Report-counters.mflops.tsv  Report.L1.tsv  Report.L2.tsv  Report.TOT_INS.tsv  Report.Time.tsv  flops.cpp  testsized.h  timeit.cpp  totins.cpp
lab3/: Book2.tsv  Makefile  main.cpp
lab3.5/: Makefile  main  main.cpp  res.txt
lab3.5/res/: 1e3.txt  1e4.txt  1e5.txt  1e6.txt  1e7.txt  1e8.txt
lab4/: Makefile  gen.cpp  main.cpp  map1.txt  map11.txt  map4.txt  map5.txt  map6.txt  map7.txt  matrix.cpp  print.cpp
lab5/: compare.cpp  gen.cpp  genMap.cpp  main.cpp  map10.txt  map12.txt  map2.txt  map3.txt  map8.txt  map9.txt  mul.cpp
lab5/res/: map1.txt  map2.txt  map3.txt  res.map.txt  res.map2.txt  res.map3.txt  res.t.txt  res.txt
os/ex_1/: ex_1.sh
os/ex_2/: ex_2.sh  test.txt
os/ex_3/: ex_3.sh
specsem/2019_12_24/: report.tex
tools/: notify_polus_queue.sh  polus_jobs.sh
(+93 files in other folders)
